--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -1,15 +1,20 @@
 header{
-    background-color: chartreuse;
+    background-color: red;
     padding: 30px;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 25px;
+    color: blanchedalmond;
 }
 
+section{
+    background-color: blanchedalmond;
+}
 
 p{
-    color: slategrey;
+    color: black;
     font-size: 20px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
 
 
@@ -26,7 +31,8 @@ nav{
 
 
 article{
-    background-color: aqua;
+    background-color: bisque;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     width: 65%;
     float: left;
 }
@@ -42,6 +48,9 @@ aside{
 
 
 footer{
-    background-color: blue;
+    background-color: blanchedalmond;
     height: 200px;
+    text-align: center;
+    color: black;
+    font-family: monospace;
 }
